mosiv文件 自己编写项目中需要的类 已经设计了状态图的部分类

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -84,24 +84,88 @@
             </ul>
         </li>
 
-        <!-- Game-Strategy -->
+        <!-- System Modeling -->
         <li class="">
             <a href="#" class="dropdown-toggle">
-                <i class="menu-icon fa fa-list"></i>
-                <span class="menu-text"> Game-Strategy </span>
+                <i class="menu-icon fa fa-users"></i>
+                <span class="menu-text"> Environments Modeling </span>
                 <b class="arrow fa fa-angle-down"></b>
             </a>
             <b class="arrow"></b>
             <ul class="submenu">
                 <li class="">
-                    <a th:href="@{#}">
+                    <a th:href="@{#}" class="dropdown-toggle">
                         <i class="menu-icon fa fa-caret-right"></i>
-                        Game
+                        Structural Diagrams
+                        <b class="arrow fa fa-angle-down"></b>
+                    </a>
+                </li>
+                <li class="">
+                    <a th:href="@{#}" class="dropdown-toggle">
+                        <i class="menu-icon fa fa-caret-right"></i>
+                        Behavioural Diagrams
+                        <b class="arrow fa fa-angle-down"></b>
                     </a>
                     <b class="arrow"></b>
+                    <ul class="submenu">
+                        <li class="">
+                            <a th:href="@{#}">
+                                <i class="menu-icon fa fa-circle"></i>
+                                Use Case Diagrams
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="">
+                            <a th:href="@{/UML/stateDiagramEditor}">
+                                <i class="menu-icon fa fa-circle"></i>
+                                State Diagrams
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="">
+                            <a th:href="@{#}">
+                                <i class="menu-icon fa fa-circle"></i>
+                                Activity Diagrams
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="">
+                            <a th:href="@{#}">
+                                <i class="menu-icon fa fa-circle"></i>
+                                Communication Diagrams
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                        <li class="">
+                            <a th:href="@{#}">
+                                <i class="menu-icon fa fa-circle"></i>
+                                Sequence Diagrams
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </li>
+
+        <!-- Game-Strategy -->
+<!--        <li class="">-->
+<!--            <a href="#" class="dropdown-toggle">-->
+<!--                <i class="menu-icon fa fa-list"></i>-->
+<!--                <span class="menu-text"> Game-Strategy </span>-->
+<!--                <b class="arrow fa fa-angle-down"></b>-->
+<!--            </a>-->
+<!--            <b class="arrow"></b>-->
+<!--            <ul class="submenu">-->
+<!--                <li class="">-->
+<!--                    <a th:href="@{#}">-->
+<!--                        <i class="menu-icon fa fa-caret-right"></i>-->
+<!--                        Game-->
+<!--                    </a>-->
+<!--                    <b class="arrow"></b>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </li>-->
 
         <!-- Simulator -->
         <li class="">
@@ -161,7 +225,7 @@
         <li class="">
             <a href="#" class="dropdown-toggle">
                 <i class="menu-icon fa fa-pencil-square-o"></i>
-                <span class="menu-text"> Checker </span>
+                <span class="menu-text"> Model Checker </span>
                 <b class="arrow fa fa-angle-down"></b>
             </a>
             <b class="arrow"></b>
@@ -212,30 +276,30 @@
         </li>
 
         <!-- Trace-Analyse -->
-        <li class="">
-            <a href="#" class="dropdown-toggle">
-                <i class="menu-icon fa fa-pencil-square-o"></i>
-                <span class="menu-text"> Trace-Analyse </span>
-                <b class="arrow fa fa-angle-down"></b>
-            </a>
-            <b class="arrow"></b>
-            <ul class="submenu">
-                <li class="">
-                    <a th:href="@{#}">
-                        <i class="menu-icon fa fa-caret-right"></i>
-                        Trace-Sim
-                    </a>
-                    <b class="arrow"></b>
-                </li>
-                <li class="">
-                    <a th:href="@{#}">
-                        <i class="menu-icon fa fa-caret-right"></i>
-                        SMC-Prob
-                    </a>
-                    <b class="arrow"></b>
-                </li>
-            </ul>
-        </li>
+<!--        <li class="">-->
+<!--            <a href="#" class="dropdown-toggle">-->
+<!--                <i class="menu-icon fa fa-pencil-square-o"></i>-->
+<!--                <span class="menu-text"> Trace-Analyse </span>-->
+<!--                <b class="arrow fa fa-angle-down"></b>-->
+<!--            </a>-->
+<!--            <b class="arrow"></b>-->
+<!--            <ul class="submenu">-->
+<!--                <li class="">-->
+<!--                    <a th:href="@{#}">-->
+<!--                        <i class="menu-icon fa fa-caret-right"></i>-->
+<!--                        Trace-Sim-->
+<!--                    </a>-->
+<!--                    <b class="arrow"></b>-->
+<!--                </li>-->
+<!--                <li class="">-->
+<!--                    <a th:href="@{#}">-->
+<!--                        <i class="menu-icon fa fa-caret-right"></i>-->
+<!--                        SMC-Prob-->
+<!--                    </a>-->
+<!--                    <b class="arrow"></b>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </li>-->
 
         <li class="">
             <a href="#" class="dropdown-toggle">
