--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,8 @@
           th:href="@{/css/font-awesome.min.css}">
     <link rel="stylesheet" href="../../static/css/ace.min.css"
           th:href="@{/css/ace.min.css}">
-    <link rel="stylesheet" href="../../static/css/admin/style.css"
-          th:href="@{/css/admin/style.css}">
+    <link rel="stylesheet" href="../../static/css/style.css"
+          th:href="@{/css/style.css}">
 
 </head>
 <body class="no-skin">
