--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -81,6 +81,7 @@
 <script src="../../../static/js/ace.min.js" th:src="@{/js/ace.min.js}"></script>
 <script src="../../../static/js/ace-extra.min.js" th:src="@{/js/ace-extra.min.js}"></script>
 <script src="../../../static/js/vue.min.js" th:src="@{/js/vue.min.js}"></script>
+<script src="../../../static/js/d3.min.js" th:src="@{/js/d3.min.js}"></script>
 <script src="../../../static/js/util.js" th:src="@{/js/util.js}"></script>
 <script src="../../../static/js/mosiv.js" th:src="@{/js/mosiv.js}"></script>
 <script>
