--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -10,6 +10,8 @@
           th:href="@{/css/font-awesome.min.css}">
     <link rel="stylesheet" href="../../../static/css/ace.min.css"
           th:href="@{/css/ace.min.css}">
+    <link rel="stylesheet" href="../../../static/css/stateDiagramEditor.css"
+          th:href="@{/css/stateDiagramEditor.css}">
 </head>
 <body class="no-skin">
 <div id="app">
@@ -35,21 +37,19 @@
                 </ul>
             </div>
 
-            <div id="canvas-wrapper" style="width: 100%; display: flex; justify-content: space-between">
+            <div id="svg-wrapper" style="width: 100%; display: flex; justify-content: space-between">
                 <div style="width: 105px; margin-right: 2px; background-color: whitesmoke; border: 1px solid black; position: relative; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); cursor: auto;">
-                    <canvas id="myPalette" tabindex="0" width="103" height="618"
-                            style="position: absolute; top: 0px; left: 0px; z-index: 2; user-select: none; cursor: auto;">
+                    <svg id="myPalette" tabindex="0" width="103" height="618">
                         This text is displayed if your browser does not support the Canvas HTML element.
-                    </canvas>
+                    </svg>
                     <div style="position: absolute; overflow: auto; width: 103px; height: 618px; z-index: 1;">
                         <div style="position: absolute; width: 1px; height: 1px;"></div>
                     </div>
                 </div>
                 <div style="width:100%; height: 620px; border: 1px solid black; position: relative; -webkit-tap-highlight-color: rgba(255, 255, 255, 0); cursor: auto;">
-                    <canvas id="myDiagram" tabindex="0" width="996" height="618"
-                            style="position: absolute; top: 0px; left: 0px; z-index: 2; user-select: none; cursor: auto;">
+                    <svg id="myDiagram" tabindex="0" width="996" height="618">
                         This text is displayed if your browser does not support the Canvas HTML element.
-                    </canvas>
+                    </svg>
                     <div style="position: absolute; overflow: auto; width: 797px; height: 618px; z-index: 1;">
                         <div style="position: absolute; width: 1px; height: 1px;"></div>
                     </div>
@@ -92,12 +92,19 @@
         ul.eq(1).children().eq(2).children().eq(1).addClass("active open");
         ul.eq(1).children().eq(2).children().eq(1).children().eq(2).children().eq(1).addClass("active");
 
+        let my_palette = d3.select('#myPalette')
+        let my_palette_wrapper = d3.select(my_palette.node().parentNode)
+        my_palette.style('width', my_palette_wrapper.node().getBoundingClientRect().width)
+                    .style('height', my_palette_wrapper.node().getBoundingClientRect().height)
+
+        let my_diagram = d3.select('#myDiagram')
+        let my_diagram_wrapper = d3.select(my_diagram.node().parentNode)
+        my_diagram.style('width', my_diagram_wrapper.node().getBoundingClientRect().width)
+                    .style('height', my_diagram_wrapper.node().getBoundingClientRect().height)
+
         let diagram = new StateDiagramCanvas({
             el: "#myDiagram", // canvas 的id
         });
-
-        $('#myPalette')[0].width = $('#myPalette').parent().width();
-        $('#myDiagram')[0].width = $('#myDiagram').parent().width();
 
         // 建模元素工具栏
         let palette = new StateDiagramPalette({
@@ -112,23 +119,23 @@
         let link = new Link();
 
         // 添加进建模元素工具栏
-        palette.add(startState);
-        palette.add(endState);
-        palette.add(state);
-        palette.add(link);
+        // palette.add(startState);
+        // palette.add(endState);
+        // palette.add(state);
+        // palette.add(link);
+        //
+        // palette.draw();
 
-        palette.draw();
-
-        $('#canvas-wrapper').on('mouseleave', (e) => {
-           component_to_transmit = null;
-           palette.component_chose = null;
-        });
-
-        $(window).resize(function() {
-            $('#myPalette')[0].width = $('#myPalette').parent().width();
-            $('#myDiagram')[0].width = $('#myDiagram').parent().width();
-            palette.update();
-            diagram.update();
+        // $('#canvas-wrapper').on('mouseleave', (e) => {
+        //    component_to_transmit = null;
+        //    palette.component_chose = null;
+        // });
+        //
+        d3.select(window).on('resize.update_svg', function() {
+            my_palette.style('width', my_palette_wrapper.node().getBoundingClientRect().width)
+                .style('height', my_palette_wrapper.node().getBoundingClientRect().height)
+            my_diagram.style('width', my_diagram_wrapper.node().getBoundingClientRect().width)
+                .style('height', my_diagram_wrapper.node().getBoundingClientRect().height)
         });
     });
 </script>
