--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -93,6 +93,7 @@
         ul.eq(1).children().eq(2).children().eq(1).children().eq(2).children().eq(1).addClass("active");
 
         let my_palette = d3.select('#myPalette')
+        // 获取父节点
         let my_palette_wrapper = d3.select(my_palette.node().parentNode)
         my_palette.style('width', my_palette_wrapper.node().getBoundingClientRect().width)
                     .style('height', my_palette_wrapper.node().getBoundingClientRect().height)
@@ -113,18 +114,18 @@
 
         // 建模元素
         // TODO 有待优化
-        let startState = new StartState(32, 51, 40);
-        let endState = new EndState(32, 51, 40 + 32*2 + 8);
-        let state = new State(51 - 32, 114 + 32*2 - 32 + 16, 64, 64);
-        let link = new Link();
+        let start_state_model = new StartStateModel(51, 40, 32);
+        // let endState = new EndState(51, 40 + 32*2 + 8, 32);
+        // let state = new State(51 - 32, 114 + 32*2 - 32 + 16, 64, 64);
+        // let link = new Link();
 
         // 添加进建模元素工具栏
-        // palette.add(startState);
+        palette.add(start_state_model)
         // palette.add(endState);
         // palette.add(state);
         // palette.add(link);
         //
-        // palette.draw();
+        palette.draw();
 
         // $('#canvas-wrapper').on('mouseleave', (e) => {
         //    component_to_transmit = null;
