--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -122,6 +122,7 @@
                     .on("click", (event, d) => {
                         if(component_to_transmit == null) {
                             component_to_transmit = d["obj"]
+                            // TODO 建模元素高亮
                         }
                         else {
                             component_to_transmit = null
