--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -129,9 +129,7 @@
                         }
                     })
 
-        let diagram = new StateDiagramCanvas({
-            el: "#myDiagram", // canvas 的id
-        });
+        let diagram = new StateDiagramSVG();
 
         // 建模元素工具栏
         // let palette = new StateDiagramPalette({
