--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -102,7 +102,8 @@
                     .style('height', my_diagram_wrapper.node().getBoundingClientRect().height)
 
 
-        let components = [{name: "StartState", obj: StartState}]
+        let components = [{name: "StartState", obj: StartState},
+            {name: "EndState", obj: EndState}]
 
         my_palette.selectAll("div")
                     .data(components)
