--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -105,7 +105,7 @@
         let components = [{name: "Cursor", obj: null},
             {name: "StartState", obj: StartState},
             {name: "EndState", obj: EndState},
-            {name: "Link", obj: Point},
+            {name: "CommonTransition", obj: CommonTransition},
             {name: "ProTransition", obj: ProTransition}]
 
         my_palette.selectAll("div")
