--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -84,6 +84,19 @@
             </ul>
         </li>
 
+        <li class="">
+            <a href="#" class="dropdown-toggle">
+                <i class="menu-icon fa fa-users"></i>
+                <span class="menu-text"> Scenario Modeling </span>
+                <b class="arrow fa fa-angle-down"></b>
+            </a>
+            <b class="arrow"></b>
+            <ul class="submenu">
+                <!--TODO-->
+
+            </ul>
+        </li>
+
         <!-- System Modeling -->
         <li class="">
             <a href="#" class="dropdown-toggle">
@@ -225,7 +238,7 @@
         <li class="">
             <a href="#" class="dropdown-toggle">
                 <i class="menu-icon fa fa-pencil-square-o"></i>
-                <span class="menu-text"> Model Checker </span>
+                <span class="menu-text"> Safety Analysis </span>
                 <b class="arrow fa fa-angle-down"></b>
             </a>
             <b class="arrow"></b>
@@ -300,6 +313,13 @@
 <!--                </li>-->
 <!--            </ul>-->
 <!--        </li>-->
+        <li class="">
+            <a href="#" class="dropdown-toggle">
+                <i class="menu-icon fa fa-pencil-square-o"></i>
+                <span class="menu-text"> Demo </span>
+            </a>
+            <b class="arrow"></b>
+        </li>
 
         <li class="">
             <a href="#" class="dropdown-toggle">
