--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -107,7 +107,7 @@
             {name: "StartState", obj: StartState},
             {name: "EndState", obj: EndState},
             {name: "CommonTransition", obj: CommonTransition},
-            {name: "ProTransition", obj: ProTransition}]
+            {name: "ProTransition", obj: BranchPoint}]
 
         my_palette.selectAll("div")
                     .data(components)
