--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -106,6 +106,7 @@
         let components = [{name: "Cursor", obj: null},
             {name: "StartState", obj: StartState},
             {name: "EndState", obj: EndState},
+            {name: "CommonState", obj: CommonState},
             {name: "CommonTransition", obj: CommonTransition},
             {name: "ProTransition", obj: ProTransition}]
 
