--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -106,8 +106,8 @@
         let components = [{name: "Cursor", obj: null},
             {name: "StartState", obj: StartState},
             {name: "EndState", obj: EndState},
-            {name: "CommonTransition", obj: CommonTransition},
-            {name: "ProTransition", obj: BranchPoint}]
+            {name: "Transition", obj: CommonTransition},
+            {name: "BranchPoint", obj: BranchPoint}]
 
         my_palette.selectAll("div")
                     .data(components)
