--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor.html
@@ -106,7 +106,7 @@
         let components = [{name: "Cursor", obj: null},
             {name: "StartState", obj: StartState},
             {name: "EndState", obj: EndState},
-            {name: "Transition", obj: CommonTransition},
+            {name: "Transition", obj: Transition},
             {name: "BranchPoint", obj: BranchPoint}]
 
         my_palette.selectAll("div")
