现阶段完整代码

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -84,19 +84,6 @@
             </ul>
         </li>
 
-        <li class="">
-            <a href="#" class="dropdown-toggle">
-                <i class="menu-icon fa fa-users"></i>
-                <span class="menu-text"> Scenario Modeling </span>
-                <b class="arrow fa fa-angle-down"></b>
-            </a>
-            <b class="arrow"></b>
-            <ul class="submenu">
-                <!--TODO-->
-
-            </ul>
-        </li>
-
         <!-- System Modeling -->
         <li class="">
             <a href="#" class="dropdown-toggle">
@@ -238,7 +225,7 @@
         <li class="">
             <a href="#" class="dropdown-toggle">
                 <i class="menu-icon fa fa-pencil-square-o"></i>
-                <span class="menu-text"> Safety Analysis </span>
+                <span class="menu-text"> Model Checker </span>
                 <b class="arrow fa fa-angle-down"></b>
             </a>
             <b class="arrow"></b>
@@ -313,13 +300,6 @@
 <!--                </li>-->
 <!--            </ul>-->
 <!--        </li>-->
-        <li class="">
-            <a href="#" class="dropdown-toggle">
-                <i class="menu-icon fa fa-pencil-square-o"></i>
-                <span class="menu-text"> Demo </span>
-            </a>
-            <b class="arrow"></b>
-        </li>
 
         <li class="">
             <a href="#" class="dropdown-toggle">
