--- a/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor3.html
+++ b/src/main/resources/templates/modeling/stateDiagram/stateDiagramEditor3.html
@@ -127,7 +127,7 @@
                     "linkingTool.portGravity": 20,
                     "relinkingTool.isUnconnectedLinkValid": true,
                     "relinkingTool.portGravity": 20,
-                    "relinkingTool.fromHand-leArchetype":
+                    "relinkingTool.fromHandleArchetype":
                         $$(go.Shape, "Diamond", {
                             segmentIndex: 0,
                             cursor: "pointer",
